; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/heimdal/appl/telnet/telnetd/extr_utility.c_writenet.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/heimdal/appl/telnet/telnetd/extr_utility.c_writenet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@netobuf = common dso_local global i32* null, align 8
@BUFSIZ = common dso_local global i64 0, align 8
@nfrontp = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @writenet(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  br label %5

5:                                                ; preds = %16, %2
  %6 = load i32*, i32** @netobuf, align 8
  %7 = load i64, i64* @BUFSIZ, align 8
  %8 = getelementptr inbounds i32, i32* %6, i64 %7
  %9 = load i32*, i32** @nfrontp, align 8
  %10 = ptrtoint i32* %8 to i64
  %11 = ptrtoint i32* %9 to i64
  %12 = sub i64 %10, %11
  %13 = sdiv exact i64 %12, 4
  %14 = load i64, i64* %4, align 8
  %15 = icmp ult i64 %13, %14
  br i1 %15, label %16, label %18

16:                                               ; preds = %5
  %17 = call i32 (...) @netflush()
  br label %5

18:                                               ; preds = %5
  %19 = load i32*, i32** @netobuf, align 8
  %20 = load i64, i64* @BUFSIZ, align 8
  %21 = getelementptr inbounds i32, i32* %19, i64 %20
  %22 = load i32*, i32** @nfrontp, align 8
  %23 = ptrtoint i32* %21 to i64
  %24 = ptrtoint i32* %22 to i64
  %25 = sub i64 %23, %24
  %26 = sdiv exact i64 %25, 4
  %27 = load i64, i64* %4, align 8
  %28 = icmp ult i64 %26, %27
  br i1 %28, label %29, label %31

29:                                               ; preds = %18
  %30 = call i32 (...) @abort() #3
  unreachable

31:                                               ; preds = %18
  %32 = load i32*, i32** @nfrontp, align 8
  %33 = load i8*, i8** %3, align 8
  %34 = load i64, i64* %4, align 8
  %35 = call i32 @memmove(i32* %32, i8* %33, i64 %34)
  %36 = load i64, i64* %4, align 8
  %37 = load i32*, i32** @nfrontp, align 8
  %38 = getelementptr inbounds i32, i32* %37, i64 %36
  store i32* %38, i32** @nfrontp, align 8
  ret void
}

declare dso_local i32 @netflush(...) #1

; Function Attrs: noreturn
declare dso_local i32 @abort(...) #2

declare dso_local i32 @memmove(i32*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
